public/css/style.css
/* Accent colour: #f70 */

body {
    font: 1em sans-serif;
    margin: 0;
}

footer {
    margin: 1em 0.5em;
}

a {
    color: #f70;
}
.nav-title {
    color: #000;
    text-decoration: none;
}
.nav-title:hover {
    text-decoration: none;
}

input, select, button {
    font: 1em sans-serif;
}
input[type=submit], button {
    border: none;
    background: #f70;
    color: #fff;
    padding: 0.3em 1em;
    border-radius: 0.2em;
}
input[type=text], input[type=password], select, textarea {
    border: 1px solid #333;
    border-radius: 0.2em;
    padding: 0.2em;
}

header {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: baseline;
    margin: 0 0.5em;
}
#menu-toggler div {
    background-color: #fff;
    width: 20px;
    height: 4px;
    border-radius: 0.2em;
    margin-bottom: 2px;
}
#menu-toggler {
    background-color: #f70;
    border-radius: 0.2em;
    padding: 0.5em;
}

nav {
    display: none;
    margin: 0 0.5em;
    right: 0;
    z-index: 1;
}
nav div {
    display: flex;
    flex-direction: column;
}
nav.open {
    position: absolute;
    display: block;
    background-color: #eee;
    border-radius: 0.2em;
    box-shadow: 0 0 6px #aaa;
}
nav a {
    text-decoration: none;
    padding: 1em 4em 1em 0.5em;
}
nav a:not(nav a:last-child) {
    border-bottom: 1px solid #ddd;
}

main {
    margin: 0 0.5em;
}

/* Home page */
.index form {
    display: grid;
    grid-template-columns: 4fr 1fr;
    grid-gap: 0.5em;
}
.index form input[type="text"] {
    grid-column: 1 / 4;
}
.index form input[type="submit"] {
    grid-column: 1 / 5;
    justify-self: left;
}

/* Login screen */
.login form {
    display: grid;
    grid-template-columns: 1fr;
}
.login form *:not(label) {
    margin-bottom: 0.8em;
}
.login form input[type="submit"] {
    justify-self: center;
}
.login a {
    display: block;
    text-align: center;
}

/* Jobs list */
.jobs-list {
    margin-top: 1em;
}
.job-item {
    display: grid;
    grid-template-columns: 4fr 1fr 1fr;
    grid-gap: 0.4em;
    align-items: center;
    padding: 0.5em 0;
}
.job-item:not(.job-item:last-child) {
    border-bottom: 1px solid #ddd;
}
.job-item:first-child {
    padding: 0 0 0.5em;
}
.job-item:last-child {
    padding: 0.5em 0 0;
}
.job-title {
    grid-column: 1 / 4;
}
.job-city {
    grid-column: 4 / 5;
}
.job-date {
    grid-column: 5 / 6;
}
.company {
    color: #777;
    font-size: 0.8em;
}
.list form {
    display: grid;
    grid-template-columns: 4fr 1fr;
    grid-gap: 0.5em;
}
.list form input[type="text"] {
    grid-column: 1 / 4;
}
.list form input[type="submit"] {
    grid-column: 1 / 5;
    justify-self: left;
}

/* Job screen */
.job-details {
    display: flex;
    flex-direction: column;
}
.job input[type=file] {
    margin-bottom: 1em;
}

/* Registration screen */
.register form {
    display: grid;
    grid-template-columns: 1fr;
}
.register form *:not(label) {
    margin-bottom: 0.8em;
}
.register form input[type="submit"] {
    justify-self: center;
}

/* Profile page */
.profile aside {
    display: none;
    border: solid #bbb;
    border-width: 0 1px 1px 1px;
    border-radius: 0 0 0.2em 0.2em;
}
.profile aside a {
    padding: 1em 0.5em;
    text-decoration: none;
}
.profile aside a:not(.profile aside a:last-child) {
    border-bottom: 1px solid #bbb;
}
.profile aside.open {
    display: flex;
    flex-direction: column;
}
#aside-toggler {
    border: 1px solid #bbb;
    border-radius: 0.2em;
    padding: 0.5em 0.5em;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    background-color: #eee;
}
#aside-toggler.open {
    border-radius: 0.2em 0.2em 0 0;
}
.arrow {
    border: solid #bbb;
    border-width: 2px 2px 0 0;
    width: 10px;
    height: 10px;
    transform: rotate(135deg);
}
.profile form {
    display: grid;
    grid-template-columns: 1fr;
}
.profile form input[type="submit"] {
    justify-self: left;
    margin: 0;
}
.profile form *:not(label) {
    margin-bottom: 0.8em;
}

/* Create/update form */
.job-form form {
    display: grid;
    grid-template-columns: 1fr;
}
.job-form form *:not(label) {
    margin-bottom: 0.8em;
}

@media screen and (min-width: 450px) {
    input[type=submit]:hover, button:hover {
        cursor: pointer;
        background: #e60;
    }

    a {
        color: #f70;
        text-decoration: none;
    }
    a:hover {
        text-decoration: underline;
    }

    main, header, nav div {
        margin: 0 1em;
    }
    footer {
        margin: 1em;
    }

    #menu-toggler {
        display: none;
    }
    nav {
        display: block;
        background-color: #f70;
        margin: 0;
    }
    nav div {
        display: flex;
        flex-direction: row;
    }
    nav a {
        border: none;
        color: #fff;
        padding: 1em 1em;
    }
    nav a:not(nav a:last-child) {
        border: none;
    }
    nav a:hover {
        background-color: #e60;
        text-decoration: none;
    }
}

@media screen and (min-width: 780px) {
    input[type=submit]:hover, button:hover {
        cursor: pointer;
        background: #e60;
    }
}

